# nasa-apps-2025

./: .gitignore  README.md  mapa.py
API/: main.py
alert-server/: README.md  main.py  requirements.txt  subscriptions.json
data-raw/air/pm25/: 72a465a6-4af1-4b0c-ade5-ddfa23cc19fe.xml  pm25.py  read-tif.py  read.py
datasets/air/pm25/: main.py  prueba.py
old/: README.md  mapa.py
old/API/: main.py
old/data-raw/air/pm25/: 72a465a6-4af1-4b0c-ade5-ddfa23cc19fe.xml  create-table.py  cut.py  pm25.py  read-tif.py  read.py  transform.py  ver.py
old/datasets/air/pm25/: main.py
old/pages/: spain_Municipality_level_3.geojson
pages/: geoBoundaries-ESP-ADM2_simplified.geojson  mapa.py
predictor/Air-Quality-Prediction-Model-main/: AQP.PY.txt  Air Quality Prediction.py  License.txt  Predicted AQI Example.txt  README.md  airquality.gitignore
predictor/dust-calima-model/: README.md  calima_prediction.py
scripts/: requirements.txt
tempo-api-wrapper/: pyproject.toml
tempo-api-wrapper/data/: municipios.csv  municipios.ods
tempo-api-wrapper/src/aqpipe/: cli.py  client.py  config.py  keys.py  pipeline.py  registry.py
website/: package-lock.json  package.json  postcss.config.js
website/public/: index.html
website/public/data/: mock.json
website/src/: App.jsx  index.js
website/src/components/: Dashboard.jsx  Filters.jsx  HistoricMap.jsx  MapView.jsx
