[project]
name = "tempo-api-wrapper"
version = "0.1.0"
description = ""
authors = [
  { name = "v3natio", email = "72844565+v3natio@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx (>=0.28.1,<0.29.0)",
  "orjson (>=3.11.3,<4.0.0)",
  "polars (>=1.34.0,<2.0.0)",
  "jupyterlab (>=4.4.9,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
